--- a/style.css
+++ b/style.css
@@ -11,6 +11,31 @@ body {
     height: 40px;
 }
 
+.center-block{
+    width :100px;
+}
+
+.row.voffset-lg.voffset{
+    display: flex;
+    flex-direction: column;
+    
+}
+.col-xs-12 {
+    width: 90%;
+    margin: auto;
+}
+
+.autor-xs-12 {
+    font-size:15px;
+    font-weight: bold;
+}
+
+.col-sm-12 {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
