--- a/style.css
+++ b/style.css
@@ -770,6 +770,10 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 270px;
+    height: 270px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .portfolio-row {
