--- a/style.css
+++ b/style.css
@@ -768,6 +768,11 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.row.row-no-gutters.social {
+    display: flex;
+    justify-content: space-between;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
     width: 270px;
